--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "khomenko/exportcart",
+  "name": "born/exportcart",
   "description": "Born test module. Export cart to CSV.",
   "require": {
   },
